# siglent-spd

./: .gitignore  LICENSE  README.md  pyproject.toml  scpi_connection.py  server.py
.github/workflows/: ci.yml  release.yml
src/siglent_spd_mcp/: __init__.py  __main__.py  server.py
tests/: test_permissions.py
