[project]
name = "siglent-spd-mcp"
dynamic = ["version"]
description = "MCP server for Siglent SPD series programmable DC power supplies"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
keywords = ["mcp", "siglent", "spd", "power-supply", "scpi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
siglent-spd-mcp = "siglent_spd_mcp.server:main"

[project.urls]
Homepage = "https://github.com/wannessels/siglent-spd-mcp"
Repository = "https://github.com/wannessels/siglent-spd-mcp"
Issues = "https://github.com/wannessels/siglent-spd-mcp/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/siglent_spd_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
